# D-FOT

./: CMakeLists.txt  README.en.md  README.md
configs/: dfot.ini
include/: configs.h  interface.h  logs.h  opt.h  records.h  tuner.h  utils.h
src/: configs.cc  logs.cc  records.cc  startup_opt.cc  utils.cc
src/oeaware_plugins/: instance.cc  tuner_sysboost.cc
